// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/components-v2/elements/Form/Otp render 1`] = `
<WithStyles(ForwardRef(Dialog))
  classes={
    Object {
      "paper": "makeStyles-dialogRoot-1",
    }
  }
  maxWidth="lg"
  open={false}
>
  <Styled(MuiBox)
    sx={
      Object {
        "textAlign": "center",
      }
    }
  >
    <Typography
      className=""
      color="general-dark"
      inline={true}
      variant="h5"
      weight="medium"
    >
      t
    </Typography>
    <Styled(MuiBox)
      mt={2}
    >
      <Typography
        className=""
        color="general-mid"
        inline={false}
        variant="caption"
        weight="normal"
      >
        d
      </Typography>
    </Styled(MuiBox)>
  </Styled(MuiBox)>
  <Styled(MuiBox)
    mt={4}
  >
    <TextField
      control={Object {}}
      disabled={false}
      error={false}
      helperText=""
      label="OTP Code"
      maxLength={6}
      name="otpCode"
      required={true}
      shouldUnregister={false}
    />
  </Styled(MuiBox)>
  <Styled(MuiBox)
    mt={2}
    textAlign="center"
  >
    <React.Fragment>
      <Typography
        className=""
        color="inherit"
        inline={false}
        variant="caption"
        weight="normal"
      >
        Didn’t get OTP Code?
         
        <span
          className="makeStyles-resendButton-2"
          onClick={[MockFunction]}
        >
          Resend code.
        </span>
      </Typography>
    </React.Fragment>
  </Styled(MuiBox)>
  <Styled(MuiBox)
    display="flex"
    justifyContent="center"
    mt={4}
  >
    <Button
      disabled={false}
      leftIcon={null}
      loading={false}
      ml={0}
      mr={0}
      onClick={[MockFunction]}
      rightIcon={null}
      rounded="normal"
      textTransform="uppercase"
      variant="ghost"
    >
      Cancel
    </Button>
    <Button
      disabled={true}
      leftIcon={null}
      loading={false}
      ml={16}
      mr={0}
      onClick={[MockFunction]}
      rightIcon={null}
      rounded="normal"
      textTransform="uppercase"
      variant="filled"
    >
      Submit
    </Button>
  </Styled(MuiBox)>
</WithStyles(ForwardRef(Dialog))>
`;

exports[`src/components-v2/elements/Form/Otp render loading 1`] = `
<WithStyles(ForwardRef(Dialog))
  classes={
    Object {
      "paper": "makeStyles-dialogRoot-3",
    }
  }
  maxWidth="lg"
  open={false}
>
  <Styled(MuiBox)
    sx={
      Object {
        "textAlign": "center",
      }
    }
  >
    <Typography
      className=""
      color="general-dark"
      inline={true}
      variant="h5"
      weight="medium"
    >
      t
    </Typography>
    <Styled(MuiBox)
      mt={2}
    >
      <Typography
        className=""
        color="general-mid"
        inline={false}
        variant="caption"
        weight="normal"
      >
        d
      </Typography>
    </Styled(MuiBox)>
  </Styled(MuiBox)>
  <Styled(MuiBox)
    mt={4}
  >
    <TextField
      control={Object {}}
      disabled={false}
      error={false}
      helperText=""
      label="OTP Code"
      maxLength={6}
      name="otpCode"
      required={true}
      shouldUnregister={false}
    />
  </Styled(MuiBox)>
  <Styled(MuiBox)
    mt={2}
    textAlign="center"
  >
    <Typography
      className=""
      color="inherit"
      inline={false}
      variant="caption"
      weight="normal"
    >
      Sending OTP...
    </Typography>
  </Styled(MuiBox)>
  <Styled(MuiBox)
    display="flex"
    justifyContent="center"
    mt={4}
  >
    <Button
      disabled={false}
      leftIcon={null}
      loading={false}
      ml={0}
      mr={0}
      onClick={[MockFunction]}
      rightIcon={null}
      rounded="normal"
      textTransform="uppercase"
      variant="ghost"
    >
      Cancel
    </Button>
    <Button
      disabled={true}
      leftIcon={null}
      loading={false}
      ml={16}
      mr={0}
      onClick={[MockFunction]}
      rightIcon={null}
      rounded="normal"
      textTransform="uppercase"
      variant="filled"
    >
      Submit
    </Button>
  </Styled(MuiBox)>
</WithStyles(ForwardRef(Dialog))>
`;

exports[`src/components-v2/elements/Form/Otp render timer 1`] = `
<WithStyles(ForwardRef(Dialog))
  classes={
    Object {
      "paper": "makeStyles-dialogRoot-5",
    }
  }
  maxWidth="lg"
  open={false}
>
  <Styled(MuiBox)
    sx={
      Object {
        "textAlign": "center",
      }
    }
  >
    <Typography
      className=""
      color="general-dark"
      inline={true}
      variant="h5"
      weight="medium"
    >
      t
    </Typography>
    <Styled(MuiBox)
      mt={2}
    >
      <Typography
        className=""
        color="general-mid"
        inline={false}
        variant="caption"
        weight="normal"
      >
        d
      </Typography>
    </Styled(MuiBox)>
  </Styled(MuiBox)>
  <Styled(MuiBox)
    mt={4}
  >
    <TextField
      control={Object {}}
      disabled={false}
      error={false}
      helperText=""
      label="OTP Code"
      maxLength={6}
      name="otpCode"
      required={true}
      shouldUnregister={false}
    />
  </Styled(MuiBox)>
  <Styled(MuiBox)
    mt={2}
    textAlign="center"
  >
    <React.Fragment>
      <Typography
        className=""
        color="inherit"
        inline={false}
        variant="caption"
        weight="normal"
      >
        Please wait
         
        22 seconds
         to resend code again.
      </Typography>
    </React.Fragment>
  </Styled(MuiBox)>
  <Styled(MuiBox)
    display="flex"
    justifyContent="center"
    mt={4}
  >
    <Button
      disabled={false}
      leftIcon={null}
      loading={false}
      ml={0}
      mr={0}
      onClick={[MockFunction]}
      rightIcon={null}
      rounded="normal"
      textTransform="uppercase"
      variant="ghost"
    >
      Cancel
    </Button>
    <Button
      disabled={true}
      leftIcon={null}
      loading={false}
      ml={16}
      mr={0}
      onClick={[MockFunction]}
      rightIcon={null}
      rounded="normal"
      textTransform="uppercase"
      variant="filled"
    >
      Submit
    </Button>
  </Styled(MuiBox)>
</WithStyles(ForwardRef(Dialog))>
`;
